test_fixtures/for/statement_condition.lox
// ParserError: UnexpectedExpressionToken found OpenBrace at l3c17
// ParserError: ExpectedSemicolon found CloseParen at l3c30
for (var a = 1; {}; a = a + 1) {}
